Adding version control back to mode line

--- a/emacs.org
+++ b/emacs.org
@@ -427,7 +427,7 @@ A macro to set keybindings from an org table
 (set-face-attribute 'mode-line-highlight nil :foreground "#7db5d6")
 (set-face-attribute 'header-line nil :background "#005858" :foreground "white")
 
-(setq-default mode-line-format '(" ✔ " mode-line-buffer-identification " " mode-line-misc-info))
+(setq-default mode-line-format '(" ✔ " mode-line-buffer-identification (vc-mode vc-mode) " " mode-line-misc-info))
 
 (setq inhibit-startup-message t
       initial-scratch-message ""
@@ -1604,6 +1604,7 @@ org-keys
       org-babel-default-header-args:shell '((:results . "output"))
       org-babel-default-header-args:bash '((:results . "output"))
       org-babel-default-header-args:js '((:results . "output")) ;; doesn't work with "value" for some reason, it just prints "undefined"
+      org-babel-default-header-args:python '((:results . "output")) ;; doesn't work with "value" for some reason, it just prints "None"
       org-babel-default-header-args:http '((:pretty . "yes")))
 #+END_SRC
 
