--- a/emacs.org
+++ b/emacs.org
@@ -973,10 +973,10 @@ base-keys (keys not in other parts of this config)
 | C-c @ <right> | hs-show-block                             | hs-minor-mode-map |      |                      |
 | C-c @ <up>    | hs-hide-level                             | hs-minor-mode-map |      |                      |
 | C-c @ <down>  | hs-show-all                               | hs-minor-mode-map |      |                      |
-| C-x m         | jw-command-prefix                         |                   |      | prefix for jw-keymap |
-| C-c m         | jw-command-prefix                         |                   |      |                      |
-| m             | jw-command-prefix                         | ctl-x-4-map       |      |                      |
-| m             | jw-command-prefix                         | ctl-x-5-map       |      |                      |
+| C-x m         | jw-keymap                                 |                   |      |                      |
+| C-c m         | jw-keymap                                 |                   |      |                      |
+| m             | jw-keymap                                 | ctl-x-4-map       |      |                      |
+| m             | jw-keymap                                 | ctl-x-5-map       |      |                      |
 | !             | cmd-dwim                                  | jw-keymap         |      |                      |
 | q             | emacs-configs-toggle                      | jw-keymap         |      |                      |
 | d             | date                                      | jw-keymap         |      |                      |
@@ -985,9 +985,7 @@ base-keys (keys not in other parts of this config)
 
 #+HEADER: :var base-keys=base-keys
 #+BEGIN_SRC emacs-lisp
-(setq jw-keymap (make-sparse-keymap))
-(fset 'jw-command-prefix jw-keymap)
-
+(define-prefix-command 'jw-keymap)
 (keybinding-org-table 'base-keys)
 #+END_SRC
 
