--- a/emacs.org
+++ b/emacs.org
@@ -262,6 +262,8 @@ These are non-interactive library functions useful in other parts of this config
                              (when (string-match "\\(?:finished\\|exited\\)" change)
                                (funcall ,fn proc))))))
 
+(setq jw--run-cmd-shell "bash")
+
 (defun jw--run-cmd (command &optional process-name before-process-creation after-process-creation after-process-finish)
   "A wrapper around `make-comint-in-buffer'.
 
@@ -283,7 +285,9 @@ For long running processes, this will always toggle back and forth between the p
         (let* ((tmp-script-dir "/tmp/emacs-jw-run-cmd/")
                (tmp-script-rel-filename (replace-regexp-in-string "[^a-zA-Z0-9]+" "-" cmd-process-name))
                (tmp-script-abs-filename (concat tmp-script-dir tmp-script-rel-filename))
-               (tmp-script-contents (format "#!%s\n\ncd %s\n\n%s" (executable-find (jw--login-shell)) (jw--pwd) prepared-cmd)))
+               (tmp-script-sh-executable (or (ignore-errors (executable-find jw--run-cmd-shell))
+                                             (executable-find (jw--login-shell))))
+               (tmp-script-contents (format "#!%s\n\ncd %s\n\n%s" tmp-script-sh-executable (jw--pwd) prepared-cmd)))
           (when (get-buffer cmd-buffer-name) (kill-buffer cmd-buffer-name))
           (jw--write-to-file tmp-script-contents tmp-script-abs-filename)
           (unless (file-executable-p tmp-script-abs-filename) (chmod tmp-script-abs-filename #o744))
@@ -716,7 +720,7 @@ With prefix arg of 4 (e.g. C-u 4 M-x date), prompt for year/month for calendar d
 
 M-x `cmd-dwim' will run an async shell command in a new buffer.
 C-u M-x `cmd-dwim' will run a shell command and print the response in the echo area.
-C-u 4 M-x `cmd-dwim' will run a shell command and insert the response at point.
+C-u 4 M-x `cmd-dwim' will run a shell command and insert the response in the buffer on the next line.
 C-u 8 M-x `cmd-dwim' will send a shell command to the default tmux session using `cmd-tmux'.
 
 Interactively:
@@ -731,7 +735,7 @@ Interactively:
                                       (read-shell-command "Command: "))))))
     (if arg
         (case arg
-          (4 (insert (shell-command-to-string prepared-cmd)))
+          (4 (save-excursion (open-line-next) (insert (s-trim (shell-command-to-string prepared-cmd)))))
           (8 (cmd-tmux prepared-cmd))
           (t (message (string-trim (shell-command-to-string prepared-cmd)))))
       (cmd prepared-cmd))))
