--- a/emacs.org
+++ b/emacs.org
@@ -924,17 +924,6 @@ If the prefix arg is 4, then kill the comment on the current line."
         (lambda (entry) (when (s-matches? ".*el$" entry) (byte-compile-file entry)))))))
 #+END_SRC
 
-*** random
-
-#+BEGIN_SRC emacs-lisp
-(defun exercism-fetch-all ()
-  (interactive)
-  (shell-command "exercism fetch"))
-
-(defun exercism-submit-this-file ()
-  (interactive)
-  (shell-command (format "exercism submit %s" (buffer-file-name))))
-#+END_SRC
 ** key bindings
 
 base-keys (keys not in other parts of this config)
@@ -1880,6 +1869,80 @@ sonic-pi-keys
 (setq org-babel-default-header-args:sonic-pi '((:results . "silent")))
 
 (org-babel-support-src-template-shortcut 'sonicpi "sonic-pi")
+#+END_SRC
+
+** exercism-io
+
+exercism-io keys
+#+NAME: exercism-io-keys
+| Key | Function         | Scope     |
+|-----+------------------+-----------|
+| x   | exercism-io-menu | jw-keymap |
+
+#+HEADER: :var exercism-io-keys=exercism-io-keys
+#+BEGIN_SRC emacs-lisp
+(jw--define-menu exercism-io-menu 'exercism-io-menu
+  :actions '("exercism.io"
+             (?f "fetch" exercism-io-fetch)
+             (?F "submit this file" exercism-io-submit-this-file)
+             (?c "configure / login" exercism-io-configure)
+             (?t "tracks" exercism-io-tracks)
+             (?l "list" exercism-io-list)
+             (?s "status" exercism-io-status)
+             (?r "restore" exercism-io-restore)
+             (?h "help" exercism-io-help)
+             (?x "(other command)" exercism-io-cmd))
+  :max-action-columns 1)
+
+(keybinding-org-table 'exercism-io-keys)
+
+(defun exercism-io-read-track ()
+  (read-string "Track (cpp, ruby, etc): "))
+
+(defun exercism-io-cmd (cmd)
+  (interactive "sCommand: ")
+  (cmd (format "exercism %s" cmd)))
+
+(defun exercism-io-cmd-sync (cmd)
+  (interactive "sCommand: ")
+  (shell-command (format "exercism %s" cmd)))
+
+(defun exercism-io-help ()
+  (interactive)
+  (exercism-io-cmd "--help"))
+
+(defun exercism-io-fetch (arg)
+  (interactive "P")
+  (if arg
+      (exercism-io-cmd-sync (format "fetch %s" (exercism-io-read-track)))
+    (exercism-io-cmd-sync "fetch")))
+
+(defun exercism-io-submit-this-file ()
+  (interactive)
+  (exercism-io-cmd-sync (format "submit %s" (buffer-file-name))))
+
+(defun exercism-io-tracks ()
+  (interactive)
+  (exercism-io-cmd "tracks"))
+
+(defun exercism-io-restore ()
+  (interactive)
+  (exercism-io-cmd "restore"))
+
+(defun exercism-io-list ()
+  (interactive)
+  (exercism-io-cmd (format "list %s" (exercism-io-read-track))))
+
+(defun exercism-io-status ()
+  (interactive)
+  (exercism-io-cmd (format "status %s" (exercism-io-read-track))))
+
+(defun exercism-io-configure ()
+  (interactive)
+  (let ((key-url "http://exercism.io/account/key"))
+    (browse-url key-url)
+    (let ((key (read-string (format "Paste key from %s here: " key-url))))
+      (exercism-io-cmd (format "configure --key=%s" key)))))
 #+END_SRC
 
 * private
