--- a/emacs.org
+++ b/emacs.org
@@ -137,7 +137,8 @@ cat init.el
             (xah-math-input--add-cycle ["∫" "∬" "∭" "⨌"])
             (xah-math-input--add-cycle ["∮" "∯" "∰" "∱" "∲" "∳"])))
 
-(use-package ess)
+(use-package ess
+  :config (setq save-abbrevs 'silently)) ;; ess R sets some abbrevs when installed
 #+END_SRC
 
 *** languages
