--- a/emacs.org
+++ b/emacs.org
@@ -118,6 +118,7 @@ cat init.el
 (use-package helm-flyspell)
 (use-package helm-descbinds)
 (use-package helm-company)
+(use-package helm-google)
 
 (use-package wgrep
   :config (setq wgrep-auto-save-buffer t))
